<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="at.preproject.point2tick.Application" >
    <item
        android:icon="@drawable/ic_alarm_add_black_24dp"
        app:showAsAction="ifRoom"
        android:id="@+id/menu_application_add_trip"
        android:title="@string/menu_application_add_trip" />
    <item android:title="@string/menu_application_service_enable"
        android:id="@+id/menu_application_service"
        app:showAsAction="never" />
    <item android:title="@string/menu_application_settings"
        android:id="@+id/menu_application_settings"
        app:showAsAction="never" />
    <item android:title="@string/menu_application_about"
        android:id="@+id/menu_application_about"
        app:showAsAction="never" />
</menu>